--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "hash_table.h": "c"
+        "hash_table.h": "c",
+        "stdlib.h": "c",
+        "math.h": "c"
     }
 }
