--- a/src/Makefile
+++ b/src/Makefile
@@ -6,3 +6,7 @@ SOURCE = DynamicArray/*.c HashTable/*.c Table/*.c *.c
 
 all:
 	$(CC) $(FLAGS) $(SOURCE) $(LIB_FLAG) -o hash_join.out
+
+
+clang_format:
+	clang-format -style=google -i $(SOURCE)
