Fixed the design style of the code

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,7 @@ CC = gcc
 FLAGS = -Wall -Wextra -std=c11
 LIB_FLAG = -lm
 SOURCE = DynamicArray/*.c HashTable/*.c Table/*.c *.c
+HEADERS = DynamicArray/*.h HashTable/*.h Table/*.h *.h
 
 
 all: clean build launch
@@ -16,7 +17,7 @@ launch:
 	./hash_join.out
 
 clang_format:
-	clang-format -style=google -i $(SOURCE)
+	clang-format -style=google -i $(SOURCE) $(HEADERS)
 
 leaks: build
 	valgrind -s ./hash_join.out --leak-check=full
